ANTLR/GoPoParser.py
# Generated from GoPo.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GoPoParser ( Parser ):

    grammarFileName = "GoPo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "'list'", "'sort'", "'map'", "'filter'", 
                     "'limit'", "'reverse'", "'drop'", "'remove'", "'removeAll'", 
                     "'count'", "'sum'", "'add'", "'forEach'", "'clear'", 
                     "'isEmpty'", "'contains'", "'print'", "'or'", "'and'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", 
                     "'-'", "'*'", "'/'", "'mod'", "'pow'", "'abs'", "'log'", 
                     "'not'", "'='", "'('", "')'", "'{'", "'}'", "'.'", 
                     "','", "'true'", "'false'", "'none'", "'if'", "'else'", 
                     "<INVALID>", "'while'", "'func'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LIST", "SORT", "MAP", "FILTER", 
                      "LIMIT", "REVERSE", "DROP", "REMOVE", "REMOVE_ALL", 
                      "COUNT", "SUM", "ADD", "FOREACH", "CLEAR", "ISEMPTY", 
                      "CONTAINS", "PRINT", "OR", "AND", "EQ", "NEQ", "GT", 
                      "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "POW", "ABS", "LOG", "NOT", "ASSIGN", "OPAR", 
                      "CPAR", "OBRACE", "CBRACE", "DOT", "COMMA", "TRUE", 
                      "FALSE", "NONE", "IF", "ELSE", "ELIF", "WHILE", "FUNC", 
                      "RETURN", "RANGE", "STRING", "NUMBER", "NUMBER_PLUS", 
                      "FLOAT", "INT", "NEWLINE", "NEWLINES", "ID", "COMMENT", 
                      "WHITESPACES", "ANY" ]

    RULE_parse = 0
    RULE_block_newline = 1
    RULE_stat_newline = 2
    RULE_stat = 3
    RULE_conditon_stat = 4
    RULE_stat_block_newline = 5
    RULE_assignment = 6
    RULE_if_stat = 7
    RULE_condition_block = 8
    RULE_condition_body = 9
    RULE_while_stat = 10
    RULE_print = 11
    RULE_list_expr = 12
    RULE_list_expr_rec = 13
    RULE_expression = 14
    RULE_atom = 15
    RULE_list = 16
    RULE_sort = 17
    RULE_map = 18
    RULE_filter = 19
    RULE_reverse = 20
    RULE_drop = 21
    RULE_count = 22
    RULE_sum = 23
    RULE_contains = 24
    RULE_is_empty = 25
    RULE_clear = 26
    RULE_foreach = 27
    RULE_add = 28
    RULE_remove = 29
    RULE_remove_all = 30

    ruleNames =  [ "parse", "block_newline", "stat_newline", "stat", "conditon_stat", 
                   "stat_block_newline", "assignment", "if_stat", "condition_block", 
                   "condition_body", "while_stat", "print", "list_expr", 
                   "list_expr_rec", "expression", "atom", "list", "sort", 
                   "map", "filter", "reverse", "drop", "count", "sum", "contains", 
                   "is_empty", "clear", "foreach", "add", "remove", "remove_all" ]

    EOF = Token.EOF
    T__0=1
    LIST=2
    SORT=3
    MAP=4
    FILTER=5
    LIMIT=6
    REVERSE=7
    DROP=8
    REMOVE=9
    REMOVE_ALL=10
    COUNT=11
    SUM=12
    ADD=13
    FOREACH=14
    CLEAR=15
    ISEMPTY=16
    CONTAINS=17
    PRINT=18
    OR=19
    AND=20
    EQ=21
    NEQ=22
    GT=23
    LT=24
    GTEQ=25
    LTEQ=26
    PLUS=27
    MINUS=28
    MULT=29
    DIV=30
    MOD=31
    POW=32
    ABS=33
    LOG=34
    NOT=35
    ASSIGN=36
    OPAR=37
    CPAR=38
    OBRACE=39
    CBRACE=40
    DOT=41
    COMMA=42
    TRUE=43
    FALSE=44
    NONE=45
    IF=46
    ELSE=47
    ELIF=48
    WHILE=49
    FUNC=50
    RETURN=51
    RANGE=52
    STRING=53
    NUMBER=54
    NUMBER_PLUS=55
    FLOAT=56
    INT=57
    NEWLINE=58
    NEWLINES=59
    ID=60
    COMMENT=61
    WHITESPACES=62
    ANY=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_newline(self):
            return self.getTypedRuleContext(GoPoParser.Block_newlineContext,0)


        def EOF(self):
            return self.getToken(GoPoParser.EOF, 0)

        def getRuleIndex(self):
            return GoPoParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = GoPoParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.block_newline()
            self.state = 63
            self.match(GoPoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_newlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat_newline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoPoParser.Stat_newlineContext)
            else:
                return self.getTypedRuleContext(GoPoParser.Stat_newlineContext,i)


        def conditon_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoPoParser.Conditon_statContext)
            else:
                return self.getTypedRuleContext(GoPoParser.Conditon_statContext,i)


        def getRuleIndex(self):
            return GoPoParser.RULE_block_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_newline" ):
                listener.enterBlock_newline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_newline" ):
                listener.exitBlock_newline(self)




    def block_newline(self):

        localctx = GoPoParser.Block_newlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block_newline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1153554823304708100) != 0:
                self.state = 67
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 18, 60]:
                    self.state = 65
                    self.stat_newline()
                    pass
                elif token in [46, 49]:
                    self.state = 66
                    self.conditon_stat()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_newlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(GoPoParser.StatContext,0)


        def NEWLINES(self):
            return self.getToken(GoPoParser.NEWLINES, 0)

        def getRuleIndex(self):
            return GoPoParser.RULE_stat_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_newline" ):
                listener.enterStat_newline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_newline" ):
                listener.exitStat_newline(self)




    def stat_newline(self):

        localctx = GoPoParser.Stat_newlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat_newline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.stat()
            self.state = 73
            self.match(GoPoParser.NEWLINES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_expr(self):
            return self.getTypedRuleContext(GoPoParser.List_exprContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GoPoParser.AssignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(GoPoParser.PrintContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = GoPoParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.list_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conditon_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(GoPoParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(GoPoParser.While_statContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_conditon_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditon_stat" ):
                listener.enterConditon_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditon_stat" ):
                listener.exitConditon_stat(self)




    def conditon_stat(self):

        localctx = GoPoParser.Conditon_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_conditon_stat)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.if_stat()
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.while_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_block_newlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(GoPoParser.OBRACE, 0)

        def block_newline(self):
            return self.getTypedRuleContext(GoPoParser.Block_newlineContext,0)


        def CBRACE(self):
            return self.getToken(GoPoParser.CBRACE, 0)

        def NEWLINES(self, i:int=None):
            if i is None:
                return self.getTokens(GoPoParser.NEWLINES)
            else:
                return self.getToken(GoPoParser.NEWLINES, i)

        def stat_newline(self):
            return self.getTypedRuleContext(GoPoParser.Stat_newlineContext,0)


        def conditon_stat(self):
            return self.getTypedRuleContext(GoPoParser.Conditon_statContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_stat_block_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_block_newline" ):
                listener.enterStat_block_newline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_block_newline" ):
                listener.exitStat_block_newline(self)




    def stat_block_newline(self):

        localctx = GoPoParser.Stat_block_newlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stat_block_newline)
        self._la = 0 # Token type
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(GoPoParser.OBRACE)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==59:
                    self.state = 85
                    self.match(GoPoParser.NEWLINES)


                self.state = 88
                self.block_newline()
                self.state = 89
                self.match(GoPoParser.CBRACE)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==59:
                    self.state = 90
                    self.match(GoPoParser.NEWLINES)


                pass
            elif token in [2, 18, 60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.stat_newline()
                pass
            elif token in [46, 49]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.conditon_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GoPoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(GoPoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(GoPoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = GoPoParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(GoPoParser.ID)
            self.state = 98
            self.match(GoPoParser.ASSIGN)
            self.state = 99
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GoPoParser.IF, 0)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoPoParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(GoPoParser.Condition_blockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(GoPoParser.ELIF)
            else:
                return self.getToken(GoPoParser.ELIF, i)

        def ELSE(self):
            return self.getToken(GoPoParser.ELSE, 0)

        def condition_body(self):
            return self.getTypedRuleContext(GoPoParser.Condition_bodyContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)




    def if_stat(self):

        localctx = GoPoParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(GoPoParser.IF)
            self.state = 102
            self.condition_block()
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 103
                    self.match(GoPoParser.ELIF)
                    self.state = 104
                    self.condition_block() 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 110
                self.match(GoPoParser.ELSE)
                self.state = 111
                self.condition_body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(GoPoParser.ExpressionContext,0)


        def condition_body(self):
            return self.getTypedRuleContext(GoPoParser.Condition_bodyContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_condition_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_block" ):
                listener.enterCondition_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_block" ):
                listener.exitCondition_block(self)




    def condition_block(self):

        localctx = GoPoParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.expression(0)
            self.state = 115
            self.condition_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat_block_newline(self):
            return self.getTypedRuleContext(GoPoParser.Stat_block_newlineContext,0)


        def NEWLINES(self):
            return self.getToken(GoPoParser.NEWLINES, 0)

        def getRuleIndex(self):
            return GoPoParser.RULE_condition_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_body" ):
                listener.enterCondition_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_body" ):
                listener.exitCondition_body(self)




    def condition_body(self):

        localctx = GoPoParser.Condition_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==59:
                self.state = 117
                self.match(GoPoParser.NEWLINES)


            self.state = 120
            self.stat_block_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GoPoParser.WHILE, 0)

        def condition_block(self):
            return self.getTypedRuleContext(GoPoParser.Condition_blockContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)




    def while_stat(self):

        localctx = GoPoParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(GoPoParser.WHILE)
            self.state = 123
            self.condition_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(GoPoParser.PRINT, 0)

        def OPAR(self):
            return self.getToken(GoPoParser.OPAR, 0)

        def expression(self):
            return self.getTypedRuleContext(GoPoParser.ExpressionContext,0)


        def CPAR(self):
            return self.getToken(GoPoParser.CPAR, 0)

        def getRuleIndex(self):
            return GoPoParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print_(self):

        localctx = GoPoParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(GoPoParser.PRINT)
            self.state = 126
            self.match(GoPoParser.OPAR)
            self.state = 127
            self.expression(0)
            self.state = 128
            self.match(GoPoParser.CPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(GoPoParser.ListContext,0)


        def ID(self):
            return self.getToken(GoPoParser.ID, 0)

        def list_expr_rec(self):
            return self.getTypedRuleContext(GoPoParser.List_expr_recContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_list_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_expr" ):
                listener.enterList_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_expr" ):
                listener.exitList_expr(self)




    def list_expr(self):

        localctx = GoPoParser.List_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_list_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 130
                self.list_()
                pass
            elif token in [60]:
                self.state = 131
                self.match(GoPoParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 134
                self.list_expr_rec()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_expr_recContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(GoPoParser.DOT, 0)

        def sort(self):
            return self.getTypedRuleContext(GoPoParser.SortContext,0)


        def map_(self):
            return self.getTypedRuleContext(GoPoParser.MapContext,0)


        def filter_(self):
            return self.getTypedRuleContext(GoPoParser.FilterContext,0)


        def reverse(self):
            return self.getTypedRuleContext(GoPoParser.ReverseContext,0)


        def list_expr_rec(self):
            return self.getTypedRuleContext(GoPoParser.List_expr_recContext,0)


        def drop(self):
            return self.getTypedRuleContext(GoPoParser.DropContext,0)


        def count(self):
            return self.getTypedRuleContext(GoPoParser.CountContext,0)


        def sum_(self):
            return self.getTypedRuleContext(GoPoParser.SumContext,0)


        def contains(self):
            return self.getTypedRuleContext(GoPoParser.ContainsContext,0)


        def is_empty(self):
            return self.getTypedRuleContext(GoPoParser.Is_emptyContext,0)


        def clear(self):
            return self.getTypedRuleContext(GoPoParser.ClearContext,0)


        def foreach(self):
            return self.getTypedRuleContext(GoPoParser.ForeachContext,0)


        def add(self):
            return self.getTypedRuleContext(GoPoParser.AddContext,0)


        def remove(self):
            return self.getTypedRuleContext(GoPoParser.RemoveContext,0)


        def remove_all(self):
            return self.getTypedRuleContext(GoPoParser.Remove_allContext,0)


        def getRuleIndex(self):
            return GoPoParser.RULE_list_expr_rec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_expr_rec" ):
                listener.enterList_expr_rec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_expr_rec" ):
                listener.exitList_expr_rec(self)




    def list_expr_rec(self):
